Username Update is Done

--- a/hello/src/main/resources/META-INF/resources/static/css/setting.css
+++ b/hello/src/main/resources/META-INF/resources/static/css/setting.css
@@ -76,3 +76,13 @@ div#v-pills-tabContent {
   text-align: center;
   text-decoration: dotted;
 }
+
+#profileImage
+{
+    cursor: pointer;
+}
+
+#imageUpload
+{
+    display: none;
+}
