--- a/hello/src/main/resources/META-INF/resources/static/css/signup.css
+++ b/hello/src/main/resources/META-INF/resources/static/css/signup.css
@@ -159,7 +159,7 @@ input {
 
 .container.right-panel-active .overlay-container{
 	transform: translateX(-100%);
-	background.image = url("../../static/pics/logo.jpg");
+	background-image: url("../../static/pics/logo.jpg");
 }
 
 /* LOADER */
