--- a/src/main/resources/META-INF/resources/static/css/chatapp.css
+++ b/src/main/resources/META-INF/resources/static/css/chatapp.css
@@ -619,6 +619,8 @@ body {
     padding: 11px 32px 10px 8px;
     font-size: 0.8em;
     color: #32465a;
+    /* margin-top: 2px;
+    border-radius: 12px; */
   }
   @media screen and (max-width: 735px) {
     #frame .content .message-input .wrap input {
@@ -655,6 +657,7 @@ body {
     cursor: pointer;
     background: #32465a;
     color: #f5f5f5;
+    /* border-radius: 20px; */
   }
   @media screen and (max-width: 735px) {
     #frame .content .message-input .wrap button {
